// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopologyView should display an empty topology correctly 1`] = `
.pf-topology-content {
  display: flex;
  background-color: #ededed;
  position: relative;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

<Component
  className="my-test-class"
  id="simple-test-id"
>
  <Stack
    className="my-test-class"
    component="div"
    gutter={null}
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <StackItem
        className=""
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill"
        >
          <div
            className="pf-topology-content"
          />
        </div>
      </StackItem>
    </div>
  </Stack>
</Component>
`;

exports[`TopologyView should display topology correctly 1`] = `
.pf-topology-control-bar {
  display: block;
  position: absolute;
  bottom: 1rem;
  left: 2rem;
}
.pf-topology-content {
  display: flex;
  background-color: #ededed;
  position: relative;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

<Component
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Stack
    className="my-test-class"
    component="div"
    gutter={null}
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <StackItem
        className=""
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <div
            id="test-context-bar"
          />
        </div>
      </StackItem>
      <StackItem
        className=""
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <div
            id="test-view-bar"
          />
        </div>
      </StackItem>
      <StackItem
        className=""
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill"
        >
          <div
            className="pf-topology-content"
          >
            <div
              id="test-canvas"
            />
            <span
              className="pf-topology-control-bar"
            >
              <div
                id="test-control-bar"
              />
            </span>
          </div>
        </div>
      </StackItem>
    </div>
  </Stack>
</Component>
`;
